--- a/jornalismo.html
+++ b/jornalismo.html
@@ -66,14 +66,14 @@
                     
                     </div>
 
-                    <div class="radios" style=" background-image: url('imagens/sulamerica.jpg');">
+                    <div class="radios" style=" background-image: url('sulamerica.jpg');">
 
                         <audio src="https://24253.live.streamtheworld.com/SULAMERICA_SC" 
                         controls ></audio>
                     
                     </div>
 
-                    <div class="radios" style=" background-image: url('imagens/jp.jpg');">
+                    <div class="radios" style=" background-image: url('jp.jpg');">
 
                         <audio src="https://18813.live.streamtheworld.com/JP_SP_AMAAC_SC" 
                         controls ></audio>
